syntax = "proto3";
package core.bridge;

import "google/protobuf/any.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/hyle-team/bridgeless-core/x/bridge/types";

message TokenInfo {
  string address = 1;
  uint64 decimals = 2;
  string chain_id = 3;;
  uint64 token_id = 4;
}

message Token {
  uint64 id = 1;
  string name = 2;
  string symbol = 3;
  // info is the token information on different chains
  repeated TokenInfo info = 4 [(gogoproto.nullable) = false];
}